force-app/main/default/objects/Contact/fields/SDO_Service_Primary_Messaging_User__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Primary_Messaging_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What: Relationship to Messaging User. Used in multiple flows for Service. Who: Service Cloud Team.</description>
    <label>Primary Messaging User</label>
    <referenceTo>MessagingEndUser</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>