force-app/main/default/objects/Contact/fields/SubcategoryPreference__c.field-meta.xml
<CustomField>
    <fullName>SubcategoryPreference__c</fullName>
    <label>Subcategory Preference</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CategoryPreference__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insulated</fullName>
            </value>
            <value>
                <fullName>Rainwear</fullName>
            </value>
            <value>
                <fullName>Lightweight</fullName>
            </value>
            <value>
                <fullName>Windbreaker</fullName>
            </value>
            <value>
                <fullName>Shirts</fullName>
            </value>
            <value>
                <fullName>TShirts</fullName>
            </value>
            <value>
                <fullName>Sweatshirts</fullName>
            </value>
            <value>
                <fullName>Casual &amp; Hike</fullName>
            </value>
            <value>
                <fullName>Shorts</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Boots</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Sandals</fullName>
            </value>
            <value>
                <fullName>Backpacks</fullName>
            </value>
            <value>
                <fullName>Gloves</fullName>
            </value>
            <value>
                <fullName>Hats</fullName>
            </value>
            <value>
                <fullName>Scarves</fullName>
            </value>
            <value>
                <fullName>Socks</fullName>
            </value>
            <value>
                <fullName>Sleeping Bags</fullName>
            </value>
            <value>
                <fullName>Tents</fullName>
            </value>
            <value>
                <fullName>Bikes</fullName>
            </value>
            <value>
                <fullName>Helmets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>