force-app/main/default/objects/Contact/fields/Total_Amount_Spent_LTV__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Spent_LTV__c</fullName>
    <label>Total Amount Spent (LTV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>