force-app/main/default/objects/Contact/fields/Total_amount_spent_period__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_spent_period__c</fullName>
    <description>Total amount spent within a specific period (i.e. Last 3 months, last year)</description>
    <inlineHelpText>Total amount spent within a specific period (i.e. Last 3 months, last year)</inlineHelpText>
    <label>Total amount spent period</label>
    <length>60</length>
    <type>Text</type>
</CustomField>